update home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg p-0 ">
                 <a class="navbar-brand mr-0" href="index.html">
-                    <img src="./images/logo2.png" alt="" srcset="">
+                    <img src="images/logo2.png" alt="" srcset="">
                 </a>
                 <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,11 +68,21 @@
     </header>
     <!-- end navigationbar -->
     <!-- start hero section  -->
-    <section id="hero-section" class="background-prop">
-        <div class="overlay text-center">
+    
+        <section id="hero-section" class="background-prop">
+                <video playsinline autoplay muted loop poster="polina.jpg" id="bgvid">
+                            <source src="images/bg.mp4"  type="video/mp4">
+                            <source src="images/bg.mp4"  type="video/ogg">
+                      </video>
+                      <!-- <iframe class="videoContainer__video" width="560" height="315"     
+                      src="https://www.youtube.com/embed/HWl8XAOQnTg?rel=0&amp;&amp;showinfo=0;&controls=0;&autoplay=1;&loop=1;&playlist=HWl8XAOQnTg"> </iframe>
+                      <iframe  src="https://www.youtube.com/embed/pNnR8X3dOa0" frameborder="0" 
+                      allow=" autoplay" allowfullscreen></iframe>         -->
+                      <!-- <iframe  src="https://www.youtube.com/embed/pNnR8X3dOa0" frameborder="0" 
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>         -->
+                      <div class="overlay text-center">
             <h1 class="mb-2 first animated  animate__fadeInDown">black stone international</h1>
             <p class="first">interior fit-out and maintenance</p>
-            <img src="./images/logo.PNG" alt="logo">
         </div>
     </section>
     <!-- end hero section  -->
@@ -169,42 +179,20 @@
     <section id="portofolio" class="sections_padding">
         <div class="line-above__header"></div>
         <h2 class="text-center pb-3 base-color">work profession</h2>
-        <div class="container-fluid">
+        <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-3 col-md-6">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/2.PNG" data-lightbox="image-1" data-title="eherwood oak gardens">
-                            <img src="./images/portfolio/2-.PNG" alt="" class="img-fluid">
+                        <a href="images/portfolio/pro-09.jpg" data-lightbox="image-1" data-title="eherwood oak gardens">
+                            <img src="images/portfolio/pro-09.jpg" class="img-fluid">
                             <div class="overlay">
                                 <h5>eherwood oak gardens</h5>
                             </div>
                         </a>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/14.PNG" data-lightbox="image-1" data-title="river crest">
-                            <img src="./images/portfolio/14-.PNG" alt="" class="img-fluid">
-                            <div class="overlay">
-                                <h5>river crest</h5>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="portfolio-items">
-                        <a href="./images/portfolio/16.PNG" data-lightbox="image-1" data-title="del monte">
-                            <img src="./images/portfolio/16-.PNG" alt="">
-                            <div class="overlay">
-                                <h5>del monte</h5>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="portfolio-items">
-                        <a href="./images/portfolio/18.PNG" data-lightbox="image-1" data-title="inverness">
-                            <img src="./images/portfolio/18-.PNG" alt="">
+                        <a href="images/portfolio/pro-15.jpg" data-lightbox="image-1" data-title="inverness">
+                            <img src="images/portfolio/pro-15.jpg" alt="" >
                             <div class="overlay">
                                 <h5>inverness</h5>
                             </div>
@@ -213,45 +201,51 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/20.PNG" data-lightbox="image-1" data-title="tree corners">
-                            <img src="./images/portfolio/20-.PNG" alt="">
+                        <a href="images/portfolio/pro-11.jpg" data-lightbox="image-1" data-title="river crest">
+                            <img src="images/portfolio/pro-11.jpg" alt="" class="img-fluid">
                             <div class="overlay">
-                                <h5>tree corners</h5>
+                                <h5>river crest</h5>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-items">
+                        <a href="images/portfolio/pro-12.jpg" data-lightbox="image-1" data-title="river crest">
+                            <img src="images/portfolio/pro-12.jpg" alt="" class="img-fluid">
+                            <div class="overlay">
+                                <h5>river crest</h5>
                             </div>
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/22.PNG" data-lightbox="image-1" data-title="lo'occitane">
-                            <img src="./images/portfolio/22-.PNG" alt="">
+                        <a href="images/portfolio/pro-13.jpg" data-lightbox="image-1" data-title="del monte">
+                            <img src="images/portfolio/pro-13.jpg" alt="">
                             <div class="overlay">
-                                <h5>lo'occitane</h5>
+                                <h5>del monte</h5>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-items">
+                        <a href="images/portfolio/pro-14.jpg" data-lightbox="image-1" data-title="del monte">
+                            <img src="images/portfolio/pro-14.jpg" alt="">
+                            <div class="overlay">
+                                <h5>del monte</h5>
                             </div>
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <div class="portfolio-items">
-                        <a href="./images/portfolio/23.PNG" data-lightbox="image-1" data-title="tory burch galeries">
-                            <img src="./images/portfolio/23-.PNG" alt="">
+                    <div class="portfolio-items latest-image">
+                        <a href="images/portfolio/pro-10.jpg" data-lightbox="image-1" data-title="river crest">
+                            <img src="images/portfolio/pro-10.jpg" alt="" class="img-fluid">
                             <div class="overlay">
-                                <h5>tory burch galeries</h5>
+                                <h5>river crest</h5>
                             </div>
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="portfolio-items">
-                        <a href="./images/portfolio/26.PNG" data-lightbox="image-1" data-title="member lines decoration">
-                            <img src="./images/portfolio/26-.PNG" alt="">
-                            <div class="overlay">
-                                <h5>member lines decoration</h5>
-                            </div>
-
-                        </a>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
@@ -269,56 +263,56 @@
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client3-.png" alt="">
+                                <img src="images/clients/client3-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client5-.png" alt="">
+                                <img src="images/clients/client5-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client7-.png" alt="">
+                                <img src="images/clients/client7-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client8-.png" alt="">
+                                <img src="images/clients/client8-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client2-.png" alt="">
+                                <img src="images/clients/client2-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client6-.png" alt="">
+                                <img src="images/clients/client6-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client4-.png" alt="">
+                                <img src="images/clients/client4-.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -335,7 +329,7 @@
             <div class="row">
                 <div class="col-lg-4 ">
                     <div class="mangar-info mb-5 mb-lg-0">
-                        <img src="./images/mangars/manager1.PNG" alt="">
+                        <img src="images/mangars/manager1.PNG" alt="">
                         <div class="mangar-name text-center">
                             <h5 class="mt-3">
                                 <a href="manager.html">nidal ghandour</a>
@@ -360,7 +354,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="mangar-info mb-5 mb-lg-0">
-                        <img src="./images/mangars/manager2.PNG" alt="">
+                        <img src="images/mangars/manager2.PNG" alt="">
                         <div class="mangar-name text-center">
                             <h5 class="mt-3">
                                 <a href="manager.html">nidal ayal</a>
@@ -385,7 +379,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="mangar-info mb-5 mb-lg-0">
-                        <img src="./images/mangars/manager3.PNG" alt="">
+                        <img src="images/mangars/manager3.PNG" alt="">
                         <div class="mangar-name text-center">
                             <h5 class="mt-3">
                                 <a href="manager.html">iftekhar sayed</a>
@@ -423,7 +417,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="about-us__footer">
-                        <img src="./images/logo.PNG" alt="logo">
+                        <img src="images/logo.PNG" alt="logo">
                         <p class="base-color">
                             'black stone' is an awars-winning and dynamic project &
                             cost management consultancy. providing a high
