update about us page

--- a/about-us.html
+++ b/about-us.html
@@ -50,79 +50,90 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#footer-section">contact us</a>
                         </li>
-                       
+
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
     <!-- end navigationbar -->
-     <!-- start hero section  -->
-     <section id="hero-aboutUs__section" class="background-prop">
-            <div class="overlay"></div>
-            <div class="hero-section__content text-center">
-                <h1 class="mb-2 ">about us</h1>
-                <p>about company</p>
-            </div>
-        </section>
-        <!-- end hero section  -->
-        <!-- start about us section -->
-        <section id="about-us__wrapper" class="sections_padding">
-            <div class="container">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="about-us__image">
-                                <!-- <img src="images/aboutUs/images.jpg" > -->
-                                <img src="images/aboutUs/3.jpg" >
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="about-us__content mt-3">
-                                <span>about company</span>
-                                <p>
-                                        "Black Stone" is an award-winning and dynamic project & cost management consultancy,
-                                         providing a high quality, value for money, fully tailored service to Clients across all sectors throughout the MENA region, and beyond. 
-                                        </p>
-                                        <p>
-                                            Our knowledgeable and experienced team offers fully tailored solutions that lead our Clients' projects from initial concept right though to operational handover, with continued support. 
-                                        </p>
-                            </div>
-                        </div>
-                    </div>    
-            </div>
-        </section>
-        <!-- end about us section -->
-    <!-- strat mission&vision -->
-    <section id="mission-vision">
-        <div class="container-fluid">
+    <!-- start hero section  -->
+    <section id="hero-aboutUs__section" class="background-prop">
+        <div class="overlay"></div>
+        <div class="hero-section__content text-center">
+            <h1 class="mb-2 ">about us</h1>
+            <p>about company</p>
+        </div>
+    </section>
+    <!-- end hero section  -->
+    <!-- start about us section -->
+    <section id="about-us__wrapper" class="sections_padding">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6 p-0">
-                    <div class="vision-content text-center ">
+                <div class="col-md-6">
+                    <div class="about-us__image">
+                        <!-- <img src="images/aboutUs/images.jpg" > -->
+                        <img src="images/aboutUs/3.jpg">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="about-us__content mt-3">
+                        <span>about company</span>
+                        <p>
+                            "Black Stone" is an award-winning and dynamic project & cost management consultancy,
+                            providing a high quality, value for money, fully tailored service to Clients across all
+                            sectors throughout the MENA region, and beyond.
+                        </p>
+                        <p>
+                            Our knowledgeable and experienced team offers fully tailored solutions that lead our
+                            Clients' projects from initial concept right though to operational handover, with continued
+                            support.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end about us section -->
+    <!-- strat mission&vision -->
+    <section id="vision" class="sections_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 ">
+                    <div class="vision-content mr-md-3 ">
                         <div class="line-above__header"></div>
-                        <h2>our vision</h2>
-                        <p class="m-auto w-50">to be the<br /> preferred maintenance service provider of choice
+                        <h2 class="base-color">our vision</h2>
+                        <p >to be the<br /> preferred maintenance service provider of choice
                             and provide top quality of interiors in the market.
                         </p>
                     </div>
                 </div>
-                <div class="col-md-6 p-0">
-                    <!-- background image of vision section -->
-                    <div class="vision-image w-100 h-100 background-prop"></div>
-                    <div class="overlay"></div>
+                <div class="col-md-6 ">
+                    <!--  image of vision section -->
+                    <div class="vision-image w-100 h-100 background-prop">
+                        <img src="images/aboutUs/vision.jpg" alt="">
+                    </div>
                 </div>
             </div>
+           
+        </div>
+    </section>
+    <!-- end  vision -->
+    <!-- start mission  -->
+    <section id="mission" class="sections_padding">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6 p-0">
+                <div class="col-md-6 ">
                     <!-- background image of mission section -->
-                    <div class="mission-image w-100 h-100 background-prop">
+                    <div class="mission-image w-100 h-100 background-prop ">
+                        <img src="images/aboutUs/mission.jpg" alt="" srcset="">
                     </div>
-                    <div class="overlay"></div>
                 </div>
-                <div class="col-md-6 p-0">
-                    <div class="mission-content text-center ">
-                        <div class="line-above__header"></div>
+                <div class="col-md-6 ">
+                    <div class="mission-content ml-md-3 ">
+                        <div class="line-above__header "></div>
                         <h2 class="base-color">our mission & values</h2>
-                        <p class="base-color pl-5 pr-5">
+                        <p >
                             to ensure superior service delivery by engaging stakeholders to take
                             ownership and bulding a sustainable enterprise . our mission is to implement valuble
                             maners like :honesty, enthics, teamwork, transparency, trust, integrity, mutual respect,
@@ -133,7 +144,7 @@
             </div>
         </div>
     </section>
-    <!-- end mission & vision -->
+    <!-- end mission  -->
     <footer id="footer-section" class="sections_padding">
         <div class="container">
             <div class="row">
