--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#hero-section">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#mission-vision">about us</a>
+                            <a class="nav-link" href="about-us.html">about us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="services.html">services</a>
