--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg p-0 ">
                 <a class="navbar-brand mr-0" href="index.html">
-                    <img src="./images/logo2.png" alt="" srcset="">
+                    <img src="images/logo2.png" alt="" srcset="">
                 </a>
                 <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,11 +29,11 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#hero-section">Home <span class="sr-only">(current)</span></a>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#mission-vision">about us</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="about-us.html">about us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="services.html">services</a>
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="about-us__footer">
-                        <img src="./images/logo.PNG" alt="logo">
+                        <img src="images/logo.PNG" alt="logo">
                         <p class="base-color">
                             'black stone' is an awars-winning and dynamic project &
                             cost management consultancy. providing a high
@@ -232,13 +232,13 @@
         <i class="fas fa-chevron-up"></i>
     </a>
 
-    <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="./js/popper.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/all.min.js"></script>
-    <script src="./js/jquery.magnific-popup.min.js"></script>
-    <script src="./js/lightbox.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/all.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/lightbox.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
