--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Black stone</title>
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/owl.carousel.css">
-    <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="./css/magnific-popup.css">
-    <link rel="stylesheet" href="./css/lightbox.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/lightbox.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -499,14 +499,14 @@
         <i class="fas fa-chevron-up"></i>
     </a>
 
-    <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="./js/popper.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/owl.carousel.js"></script>
-    <script src="./js/all.min.js"></script>
-    <script src="./js/jquery.magnific-popup.min.js"></script>
-    <script src="./js/lightbox.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.js"></script>
+    <script src="js/all.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/lightbox.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
