--- a/manager.html
+++ b/manager.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Manager message</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="./css/animate.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/maneger.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/maneger.css">
 </head>
 <body>
     <!-- start navigationbar -->
@@ -17,7 +17,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg p-0 ">
                     <a class="navbar-brand mr-0" href="index.html">
-                        <img src="./images/logo2.png" alt="" srcset="">
+                        <img src="images/logo2.png" alt="" srcset="">
                     </a>
                     <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="manager-image">
-                        <img src="./images/mangars/m1.PNG" alt="" srcset="">
+                        <img src="images/mangars/m1.PNG" alt="" srcset="">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -130,7 +130,7 @@ The contracting and general maintenance business in the United States is always 
             <div class="row">
                 <div class="col-lg-4">
                     <div class="about-us__footer">
-                        <img src="./images/logo.PNG" alt="logo">
+                        <img src="images/logo.PNG" alt="logo">
                         <p class="base-color">
                             'black stone' is an awars-winning and dynamic project &
                             cost management consultancy. providing a high
@@ -211,11 +211,11 @@ The contracting and general maintenance business in the United States is always 
     <a href="#" id="arrow">
             <i class="fas fa-chevron-up"></i>
         </a>
-    <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="./js/popper.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/all.min.js"></script>
-    <script src="./js/wow.min.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/all.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
