--- a/services.html
+++ b/services.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Black Stone Services</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="./css/magnific-popup.css">
-    <link rel="stylesheet" href="./css/lightbox.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/services.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/lightbox.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/services.css">
 
 </head>
 
@@ -21,7 +21,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg p-0 ">
                 <a class="navbar-brand mr-0" href="index.html">
-                    <img src="./images/logo2.png" alt="">
+                    <img src="images/logo2.png" alt="">
                 </a>
                 <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,7 +107,7 @@
                     <div class="tab-content" id="nav-tabContent">
                         <!-- internal furniture transport service -->
                         <div class="tab-pane fade show active" id="furniture-transport" role="tabpanel" aria-labelledby="nav-home-tab">
-                            <img src="./images/services/service1.jpg">
+                            <img src="images/services/service1.jpg">
                             <!-- content furniture-transport -->
                             <ul class="list-unstyled service-details__content d-flex flex-md-row flex-column">
                                 <li class="mr-3 col-md-6">
@@ -132,7 +132,7 @@
                         </div>
                         <!-- gympsum ceiling works service -->
                         <div class="tab-pane fade" id="gympsum-ceiling" role="tabpanel" aria-labelledby="nav-profile-tab">
-                            <img src="./images/services/service3.jpg">
+                            <img src="images/services/service3.jpg">
                             <!-- content gympsum ceiling works service -->
                             <ul class="list-unstyled service-details__content d-flex flex-md-row flex-column">
                                 <li class="mr-3 col-md-6">
@@ -159,7 +159,7 @@
                         </div>
                         <!--doors & partitions service  -->
                         <div class="tab-pane fade" id="doors-partitions" role="tabpanel" aria-labelledby="nav-contact-tab">
-                            <img src="./images/services/service2.jpg">
+                            <img src="images/services/service2.jpg">
                             <!-- content gympsum ceiling works service -->
                             <ul class="list-unstyled service-details__content d-flex flex-md-row flex-column">
                                 <li class="mr-3 col-md-6">
@@ -182,7 +182,7 @@
                         </div>
                         <!-- alignment & adjustments service -->
                         <div class="tab-pane fade" id="alignment-adjustments" role="tabpanel" aria-labelledby="nav-contact-tab">
-                            <img src="./images/services/service4.jpg">
+                            <img src="images/services/service4.jpg">
                             <!-- content alignment & adjustments service -->
                             <ul class="list-unstyled service-details__content d-flex flex-md-row flex-column">
                                 <li class="mr-3 col-md-6">
@@ -213,7 +213,7 @@
                         </div>
                         <!-- silicone & sealant service -->
                         <div class="tab-pane fade" id="silicone-sealant" role="tabpanel" aria-labelledby="nav-contact-tab">
-                            <img src="./images/services/service5.jpg">
+                            <img src="images/services/service5.jpg">
                             <!-- content silicone & sealant service -->
                             <ul class="list-unstyled service-details__content d-flex flex-md-row flex-column">
                                 <li class="mr-3 col-md-6">
@@ -245,7 +245,7 @@
                         </div>
                         <!-- fixed and loose furnitue service -->
                         <div class="tab-pane fade" id="fixed-loose__furnitue" role="tabpanel" aria-labelledby="nav-contact-tab">
-                            <img src="./images/services/service6.jpg">
+                            <img src="images/services/service6.jpg">
                             <!-- content silicone & sealant service -->
                             <ul class="list-unstyled service-details__content d-flex flex-md-row flex-column">
                                 <li class="mr-3 col-md-6">
@@ -271,7 +271,7 @@
                         </div>
                         <!-- electrical services -->
                         <div class="tab-pane fade" id="electrical" role="tabpanel" aria-labelledby="nav-contact-tab">
-                            <img src="./images/services/service7.jpg">
+                            <img src="images/services/service7.jpg">
                             <!-- content electrical services -->
                             <ul class="list-unstyled service-details__content d-flex flex-md-row flex-column">
                                 <li class="mr-3 col-md-6">
@@ -297,7 +297,7 @@
                         </div>
                         <!-- upholstery services -->
                         <div class="tab-pane fade" id="upholstery" role="tabpanel" aria-labelledby="nav-contact-tab">
-                                <img src="./images/services/service8.jpg">
+                                <img src="images/services/service8.jpg">
                                 <!-- content electrical services -->
                                 <ul class="list-unstyled service-details__content d-flex flex-md-row flex-column">
                                     <li class="mr-3 col-md-6">
@@ -330,7 +330,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="about-us__footer">
-                        <img src="./images/logo.PNG" alt="logo">
+                        <img src="images/logo.PNG" alt="logo">
                         <p class="base-color">
                             'black stone' is an awars-winning and dynamic project &
                             cost management consultancy. providing a high
@@ -411,13 +411,13 @@
     <a href="#" id="arrow">
         <i class="fas fa-chevron-up"></i>
      </a>
-    <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="./js/popper.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/all.min.js"></script>
-    <script src="./js/jquery.magnific-popup.min.js"></script>
-    <script src="./js/lightbox.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/all.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/lightbox.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
