adding portfolio home page

--- a/index.html
+++ b/index.html
@@ -74,25 +74,17 @@
                             <source src="images/bg.mp4"  type="video/mp4">
                             <source src="images/bg.mp4"  type="video/ogg">
                       </video>
-                      <!-- <iframe class="videoContainer__video" width="560" height="315"     
-                      src="https://www.youtube.com/embed/HWl8XAOQnTg?rel=0&amp;&amp;showinfo=0;&controls=0;&autoplay=1;&loop=1;&playlist=HWl8XAOQnTg"> </iframe>
-                      <iframe  src="https://www.youtube.com/embed/pNnR8X3dOa0" frameborder="0" 
-                      allow=" autoplay" allowfullscreen></iframe>         -->
-                      <!-- <iframe  src="https://www.youtube.com/embed/pNnR8X3dOa0" frameborder="0" 
-                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>         -->
                       <div class="overlay text-center">
             <h1 class="mb-2 first animated  animate__fadeInDown">black stone international</h1>
             <p class="first">interior fit-out and maintenance</p>
         </div>
     </section>
     <!-- end hero section  -->
-    <!-- start about us section -->
     
-    <!-- end about us section -->
     <!-- strart our services planning -->
     <section id="service-planning" class="sections_padding">
         <div class="line-above__header"></div>
-        <h2 class="text-center pb-3 base-color">our process</h2>
+        <h2 class="text-center pb-3 base-color"><span>our</span> process</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -178,7 +170,7 @@
     <!-- strat portofilo section -->
     <section id="portofolio" class="sections_padding">
         <div class="line-above__header"></div>
-        <h2 class="text-center pb-3 base-color">work profession</h2>
+        <h2 class="text-center pb-3 base-color"><span>work</span> profession</h2>
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-3 col-md-6">
@@ -255,7 +247,7 @@
         <div class="overlay"></div>
         <div class="our-client__header">
             <div class="line-above__header"></div>
-            <h2 class="text-center pb-3 base-color">our clients</h2>
+            <h2 class="text-center pb-3 base-color"><span>our</span> clients</h2>
         </div>
         <div class="our-client_images m-auto">
             <div class="container">
@@ -324,7 +316,7 @@
     <!-- start our team section -->
     <section id="our-team" class="sections_padding">
         <div class="line-above__header"></div>
-        <h2 class="text-center pb-3 base-color">our team</h2>
+        <h2 class="text-center pb-3 base-color"><span>our</span> team</h2>
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 ">
