--- a/about-us.html
+++ b/about-us.html
@@ -72,13 +72,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="about-us__image">
-                        <!-- <img src="images/aboutUs/images.jpg" > -->
-                        <img src="images/aboutUs/3.jpg">
+                        <img src="images/aboutUs/aboutUs.PNG">
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="about-us__content mt-3">
-                        <span>about company</span>
+                    <div class="about-us__content ml-md-3">
+                        <h2>a few words about us</h2>
                         <p>
                             "Black Stone" is an award-winning and dynamic project & cost management consultancy,
                             providing a high quality, value for money, fully tailored service to Clients across all
@@ -101,8 +100,8 @@
             <div class="row">
                 <div class="col-md-6 ">
                     <div class="vision-content mr-md-3 ">
-                        <div class="line-above__header"></div>
-                        <h2 class="base-color">our vision</h2>
+                        <!-- <div class="line-above__header"></div> -->
+                        <h2>our vision</h2>
                         <p >to be the<br /> preferred maintenance service provider of choice
                             and provide top quality of interiors in the market.
                         </p>
@@ -110,8 +109,8 @@
                 </div>
                 <div class="col-md-6 ">
                     <!--  image of vision section -->
-                    <div class="vision-image w-100 h-100 background-prop">
-                        <img src="images/aboutUs/vision.jpg" alt="">
+                    <div class="vision-image w-100 h-100 background-prop about-us__image">
+                        <img src="images/aboutUs/vision2.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -125,14 +124,14 @@
             <div class="row">
                 <div class="col-md-6 ">
                     <!-- background image of mission section -->
-                    <div class="mission-image w-100 h-100 background-prop ">
-                        <img src="images/aboutUs/mission.jpg" alt="" srcset="">
+                    <div class="mission-image w-100 h-100 background-prop about-us__image ">
+                        <img src="images/aboutUs/mission1.jpg" alt="" srcset="">
                     </div>
                 </div>
                 <div class="col-md-6 ">
                     <div class="mission-content ml-md-3 ">
-                        <div class="line-above__header "></div>
-                        <h2 class="base-color">our mission & values</h2>
+                        <!-- <div class="line-above__header "></div> -->
+                        <h2>our mission & values</h2>
                         <p >
                             to ensure superior service delivery by engaging stakeholders to take
                             ownership and bulding a sustainable enterprise . our mission is to implement valuble
@@ -145,6 +144,7 @@
         </div>
     </section>
     <!-- end mission  -->
+    <!-- start footer -->
     <footer id="footer-section" class="sections_padding">
         <div class="container">
             <div class="row">
