update navigation bar

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,44 +18,54 @@
 <body>
     <!-- start navigationbar -->
     <header class="fixed-top">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg p-0 ">
-                <a class="navbar-brand mr-0" href="index.html">
-                    <img src="images/logo2.png" alt="" srcset="">
-                </a>
-                <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item ">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="about-us.html">about us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="services.html">services</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#portofolio">portofolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#our-client">our client</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#our-team">our team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#footer-section">contact us</a>
-                        </li>
-
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header>
+            <div class="container">
+                <nav class="navbar navbar-expand-lg p-0 ">
+                    <a class="navbar-brand mr-0" href="index.html">
+                        <img src="images/logo2.png" alt="">
+                    </a>
+                    <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item ">
+                                <a class="nav-link" href="index.html#hero-section">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about-us.html">about us</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link " href="services.html">services</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="portfolio.html">portofolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html#our-client">our client</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html#our-team">our team</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#footer-section">contact us</a>
+                            </li>
+                            <!-- <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Dropdown link
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                    </div>
+                                </li> -->
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
     <!-- end navigationbar -->
     <!-- start hero section  -->
     <section id="hero-portfolio__section" class="background-prop">
