--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
                             <a class="nav-link " href="services.html">services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#portofolio">portofolio</a>
+                            <a class="nav-link" href="portfolio.html">portofolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html#our-client">our client</a>
